# acmougda

./: .gitignore  CMakeLists.txt  GlobalConfig.h.in  README.md  windows.h.in
include/GLFW/: glfw3.h
ogl/: main.cpp
vk/: main.cpp  vkrunner.cpp  vkrunner.hpp
